# comic2kindle

./: .gitignore  CLAUDE.md  DEBUG_NOTES.md  README.md  TODO.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: convert.py  devices.py  download.py  metadata.py  upload.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  ai_upscaler.py  converter.py  device_profiles.py  epub_reader.py  extractor.py  file_manager.py  filename_parser.py  image_processor.py  merger.py  metadata_lookup.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/messages/: en.json  es.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/convert/: page.tsx
frontend/src/components/: conversion-settings.tsx  device-selector.tsx  file-dropzone.tsx  file-list.tsx  image-options.tsx  language-selector.tsx  metadata-editor.tsx  metadata-search.tsx  progress-tracker.tsx  theme-toggle.tsx
frontend/src/lib/: api.ts  store.ts
frontend/src/types/: index.ts
